@@ -124,6 +124,11 @@ def utf8_body():
     # bottle encodes the body
     return 'Дружба народов'
 
+@app.route('/invalid_utf8_body')
+def invalid_utf8_body():
+    # bottle encodes the body
+    raise bottle.HTTPResponse(b'\xb3\xd2\xda\xcd\xd7', 200)
+
 @app.route('/set_cookie_invalid_utf8')
 def set_cookie_invalid_utf8():
     bottle.response.set_header('Set-Cookie', '\xb3\xd2\xda\xcd\xd7=%96%A6g%9Ay%B0%A5g%A7tm%7C%95%9A')
